--- a/app/views/decks/_card.html.erb
+++ b/app/views/decks/_card.html.erb
@@ -1,8 +1,16 @@
 <div class="card">
-<% fields_for "deck[card_attributes][]", card do |card_form| %>
-  <p>Card: <%= card_form.text_field :front, :size => 20 %>
-           <%= card_form.text_field :back, :size => 20 %>
-     <%= link_to_function "remove", "this.up('.card').remove()" %>
-  </p>
-<% end %>
+  <% fields_for "deck[card_attributes][]", card do |f| %>
+    <p>
+	Card: 
+        <%= f.text_field :front, :size => 20, :index => nil %>
+        <%= f.text_field :back, :size => 20, :index => nil %>
+	<% if card.new_record? %>
+  	  <%= link_to_function "remove", "$(this).up('.card').remove()" %>
+	<% else %>
+	  <%= link_to_function "remove", "mark_for_destroy(this)" %>
+	  <%= f.hidden_field :id, :index => nil %>
+	  <%= f.hidden_field :should_destroy, :index => nil, :class => 'should_destroy' %>
+	<% end %>
+    </p>
+  <% end %>
 </div>
