--- a/app/views/decks/edit.html.erb
+++ b/app/views/decks/edit.html.erb
@@ -3,13 +3,8 @@
 <% form_for(@deck) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit "Update" %>
-  </p>
+  <%= render :partial => 'fields', :locals => { :f => f } %>
+  <p><%= f.submit "Update" %></p>
 <% end %>
 
 <%= link_to 'Show', @deck %> |
