can see front of first card, part way to revealing back of card

--- a/app/views/decks/quiz.html.erb
+++ b/app/views/decks/quiz.html.erb
@@ -1,8 +1,10 @@
 <h1>Quizzing on <%= @deck.name %></h1>
 
+<div>
 <p>Front:</p> 
-<blockquote><div class="card-front"><%= @deck.cards[0].front %></div></blockquote>
+<blockquote><div id="card-front"><%= @deck.cards[0].front %></div></blockquote>
 <p>Back:</p> 
-<blockquote><div class="card-back"> </div></blockquote>
+<blockquote><div id="cardback"></div></blockquote>
 
-<p><%= button_to_remote 'Reveal Answer' %></p>
+<p><%= button_to_function 'Reveal Answer', "reveal_back()" %></p>
+</div>
