--- a/app/views/decks/quiz.html.erb
+++ b/app/views/decks/quiz.html.erb
@@ -2,9 +2,9 @@
 
 <div>
 <p>Front:</p> 
-<blockquote><div id="card-front"><%= @deck.cards[0].front %></div></blockquote>
+<blockquote><div id="cardfront"><%= @deck.cards[0].front %></div></blockquote>
 <p>Back:</p> 
 <blockquote><div id="cardback"></div></blockquote>
 
-<p><%= button_to_function 'Reveal Answer', "reveal_back()" %></p>
+<p><%= button_to_function 'Reveal Answer', "reveal_back('#{@deck.cards[0].back}')" %></p>
 </div>
