--- a/app/views/decks/quiz.html.erb
+++ b/app/views/decks/quiz.html.erb
@@ -1,10 +1,10 @@
-<h1>Quizzing on <%= @deck.name %></h1>
-
 <div>
 <p>Front:</p> 
-<blockquote><div id="cardfront"><%= @deck.cards[0].front %></div></blockquote>
+<blockquote><div id="cardfront"><%= @card.front %></div></blockquote>
 <p>Back:</p> 
 <blockquote><div id="cardback"></div></blockquote>
 
-<p><%= button_to_function 'Reveal Answer', "reveal_back('#{@deck.cards[0].back}')" %></p>
+<p><%= button_to_function 'Reveal Answer', "reveal_back('#{@card.back}')" %></p>
 </div>
+
+<p><%= button_to 'Next', :offset => (@offset + 1) %>
