--- a/app/views/decks/quiz.html.erb
+++ b/app/views/decks/quiz.html.erb
@@ -7,6 +7,8 @@
 <p><%= button_to_function 'Reveal Answer', "reveal_back('#{@card.back}')" %></p>
 </div>
 
-<p><%= button_to 'Next', :offset => (@offset + 1) %>
+<p><%= button_to 'Next' %>
 
+<p>Offset: <%= @offset %></p>
 
+<%= debug(@myquiz) %>
