--- a/app/views/layouts/decks.html.erb
+++ b/app/views/layouts/decks.html.erb
@@ -12,6 +12,16 @@
 
 <p style="color: green"><%= flash[:notice] %></p>
 
+<div id="user_nav">
+  <% if current_user %>
+    <%= link_to "Edit Profile", edit_user_path(:current) %> |
+    <%= link_to "Logout", logout_path %>
+  <% else %>
+    <%= link_to "Register", new_user_path %> |
+    <%= link_to "Login", login_path %>
+  <% end %>
+</div>
+
 <%= yield  %>
 
 </body>
