--- a/app/views/decks/show.html.erb
+++ b/app/views/decks/show.html.erb
@@ -2,7 +2,7 @@
   <b>Name:</b>
   <%=h @deck.name %>
 </p>
-
+<p><b>Owner:</b> <%=h @owner %></p>
 <% for card in @deck.cards %>
   <p><%= card.front %> | <%= card.back %></p>
 <% end %>
