--- a/app/views/decks/show.html.erb
+++ b/app/views/decks/show.html.erb
@@ -7,5 +7,5 @@
   <p><%= card.front %> | <%= card.back %></p>
 <% end %>
 
-<%= link_to 'Edit', edit_deck_path(@deck) %> |
-<%= link_to 'Back', decks_path %>
+<%= link_to 'Edit', edit_user_deck_path(@user, @deck) %> |
+<%= link_to 'Back', user_decks_path %>
