--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -1,10 +1,10 @@
 <h1>New deck</h1>
 
-<% form_for(@deck) do |f| %>
+<% form_for([@user, @deck]) do |f| %>
   <%= f.error_messages %>
 
   <%= render :partial => 'fields', :locals => { :f => f } %>
   <p><%= f.submit "Create" %></p>
 <% end %>
 
-<%= link_to 'Back', decks_path %>
+<%= link_to 'Back', user_decks_path %>
