--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -7,6 +7,7 @@
 
 <% for deck in @decks %>
   <tr>
+    <td><%= link_to 'Quiz', :id => deck, :action => 'quiz' %>
     <td><%=h deck.name %></td>
     <td><%=h(deck.user.username) unless deck.user.username.nil? %></td>
     <td><%= link_to 'Show', user_deck_path(deck.user, deck) %></td>
@@ -17,5 +18,3 @@
 </table>
 
 <br />
-
-
