--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,14 @@
 
 <%= yield  %>
 
-
-<p><%= link_to 'Home', root_url %></p>
-
 <div id="user_nav">
   <% if current_user %>
+    <%= link_to 'Home', root_url %> |
     <%= link_to "Edit Profile", edit_user_path(:current) %> |
     <%= link_to "Logout", logout_path %>
   <% else %>
     <p>Log in to create your own decks!</p>
+    <%= link_to 'Home', root_url %> |
     <%= link_to "Register", new_user_path %> |
     <%= link_to "Login", login_path %>
   <% end %>
