only a deck's owner can modify it; cleaned up 'my decks' view

--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,22 +1,14 @@
-<h1>Listing decks</h1>
+<h1>My Decks</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-  </tr>
-
 <% for deck in @decks %>
-  <tr>
-    <td><%=h deck.name %></td>
-    <td><%=h(deck.user.username) unless deck.user.username.nil? %></td>
-    <td><%= link_to 'Show', user_deck_path(deck.user, deck) %></td>
-    <td><%= link_to 'Edit', edit_user_deck_path(deck.user, deck) %></td>
-    <td><%= link_to 'Destroy', user_deck_path(deck.user, deck), :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+<tr>
+  <td><%= h(deck.name) %></td>
+  <td><%= link_to 'View', deck_path(deck) %></td>
+  <td><%= link_to 'Edit', edit_deck_path(deck) %></td>
+  <td><%= link_to 'Destroy', deck, :confirm => 'Are you sure?', :method => :delete %></td>
+</tr>
 <% end %>
 </table>
 
-<br />
-
-
-<%= debug params %>
+<%= link_to 'Create New Deck', new_deck_path %>
