--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Title</title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'main' %>
   <%= javascript_include_tag :defaults %>
 </head>
 <body>
@@ -14,6 +14,7 @@
 
 <%= yield  %>
 
+<p>
 <div id="user_nav">
   <% if current_user %>
     <%= link_to 'Home', root_url %> |
@@ -27,6 +28,7 @@
     <%= link_to "Login", login_path %>
   <% end %>
 </div>
+</p>
 
 </body>
 </html>
