--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,26 +9,35 @@
   <%= javascript_include_tag :defaults %>
 </head>
 <body>
+<div id="wrapper">
 
-<p style="color: green"><%= flash[:notice] %></p>
+<div id="header">
+  Kirkland's Flashcards
+</div>
 
-<%= yield  %>
-
-<p>
+<div id="sidebar">
 <div id="user_nav">
+<ul>
   <% if current_user %>
-    <%= link_to 'Home', root_url %> |
-    <%= link_to 'My Decks', decks_url %> |
-    <%= link_to "Edit Profile", edit_user_path(:current) %> |
-    <%= link_to "Logout", logout_path %>
+    <li><%= link_to 'Home', root_url %></li>
+    <li><%= link_to 'My Decks', decks_url %></li>
+    <li><%= link_to "Edit Profile", edit_user_path(:current) %></li>
+    <li><%= link_to "Logout", logout_path %></li>
   <% else %>
     <p>Log in to create your own decks!</p>
     <%= link_to 'Home', root_url %> |
     <%= link_to "Register", new_user_path %> |
     <%= link_to "Login", login_path %>
   <% end %>
+</ul>
+</div>  
 </div>
-</p>
+
+<div id="content">
+  <p style="color: green"><%= flash[:notice] %></p>
+  <%= yield  %>
+</div>
+</div>
 
 </body>
 </html>
