--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,35 @@
-body {
-    background-color:#FFDF9F;
+html, body {
+    background-color:#A7791C;
+    padding:0;
+    width:750px;
+    margin:0 auto;
 }
+
+div#wrapper {
+    float:left;
+    background-color:#FFDF9F;
+    border:solid;
+    border-width:1px;
+}
+
+div#header {
+    padding-left:10px;
+    height:100px;
+    font-size:30px;
+    line-height:100px; /* must be same as height */
+}
+
+div#sidebar {
+    float:left;
+    width:200px;
+}
+
+div#content {
+    width:545px;
+    float:right;
+}
+
+/* div { */
+/*     border:solid; */
+/*     border-width:1px; */
+/* } */
