--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,11 @@
 <div id="user_nav">
 <ul>
   <% if current_user %>
-    <li><%= link_to 'Home', root_url %></li>
-    <li><%= link_to 'My Decks', decks_url %></li>
-    <li><%= link_to "Edit Profile", edit_user_path(:current) %></li>
+    <li><%= link_to 'Home', root_url %></li> | 
+    <li><%= link_to 'My Decks', decks_url %></li> | 
+    <li><%= link_to "Edit Profile", edit_user_path(:current) %></li> | 
     <li><%= link_to "Logout", logout_path %></li>
   <% else %>
-    <p>Log in to create your own decks!</p>
     <%= link_to 'Home', root_url %> |
     <%= link_to "Register", new_user_path %> |
     <%= link_to "Login", login_path %>
@@ -35,6 +34,9 @@
 
 <div id="content">
   <p style="color: green"><%= flash[:notice] %></p>
+  <% if not current_user %>
+    <p>Log in to create your own decks!</p>
+  <% end %>
   <%= yield  %>
 </div>
 </div>
