--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,15 +38,17 @@ div#content {
 }
 
 .card {
-    float:left;
-    width:330px;
-    min-height:150px;
-    border:solid;
-    border-width:1px;
-    text-align:center;
-    margin:10px;
     background-color:white;
+    float:left;
     font-size:50px;
+    width:330px;
+    text-align:center;
+    padding-top:50px;
+    padding-bottom:40px;
+    max-height:100px;
+    min-height:100px; 
+    border:1px solid;
+    margin:10px;
 }
 
 #card-navigation {
