--- a/app/views/quiz/quiz_card.html.erb
+++ b/app/views/quiz/quiz_card.html.erb
@@ -1,5 +1,5 @@
-<div class="card" id="cardfront"><%= @card.front %></div>
-<div class="card" id="cardback"></div>
+<div class="outer-card"><div class="card" id="cardfront" style="font-size:<%=@frontsize %>"><%= @card.front %></div></div>
+<div class="outer-card"><div class="card" id="cardback" style="font-size:<%= @backsize %>"></div></div>
 
 <div id="card-navigation">
 <%= button_to_function 'Reveal Answer', "reveal_back('#{@card.back}')" %>
