--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Title</title>
+  <title>Kirkland's Flashcards</title>
   <%= stylesheet_link_tag 'main' %>
   <%= javascript_include_tag :defaults %>
 </head>
@@ -15,9 +15,8 @@
   Kirkland's Flashcards
 </div>
 
-<div id="sidebar">
-<div id="user_nav">
-<ul>
+<div id="user-nav">
+
   <% if current_user %>
     <li><%= link_to 'Home', root_url %></li> | 
     <li><%= link_to 'My Decks', decks_url %></li> | 
@@ -28,8 +27,7 @@
     <%= link_to "Register", new_user_path %> |
     <%= link_to "Login", login_path %>
   <% end %>
-</ul>
-</div>  
+
 </div>
 
 <div id="content">
