--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,7 +4,6 @@ html, body {
     width:750px;
     margin:auto;
     margin-top:10px;
-
 }
 
 div#wrapper {
@@ -15,41 +14,28 @@ div#wrapper {
 }
 
 div#header {
-    padding-left:10px;
     font-size:30px;
     text-align: center;
-    padding-top:10px;
+    padding-top:15px;
 }
 
-div#sidebar {
+div#user-nav {
     text-align:center;
+    list-style-type:none;
+    margin-left:0;
+    padding:0;
 
 }
 
-div#sidebar li {
+div#user-nav li {
     display:inline;
-    list-style-type:none;
+
 }
 
 div#content {
     width:715px;
-    float:right;
     padding:15px;
 }
-
-/* .card { */
-/*     background-color:white; */
-/*     float:left; */
-/*     font-size:50px; */
-/*     width:330px; */
-/*     text-align:center; */
-/*     padding-top:50px; */
-/*     padding-bottom:40px; */
-/*     max-height:100px; */
-/*     min-height:100px;  */
-/*     border:1px solid; */
-/*     margin:10px; */
-/* } */
 
 .card {
     background-color:white;
