--- a/app/views/decks/show.html.erb
+++ b/app/views/decks/show.html.erb
@@ -3,6 +3,7 @@
   <%=h @deck.name %>
 </p>
 <p><b>Owner:</b> <%=h @deck.user.username %></p>
+<p><b>Sharing:</b> <%= @deck.share %></p>
 <% for card in @deck.cards %>
   <p><%= card.front %> | <%= card.back %></p>
 <% end %>
