--- a/app/views/quiz/quiz_card.html.erb
+++ b/app/views/quiz/quiz_card.html.erb
@@ -1,6 +1,6 @@
-<div class="outer-card"><div class="card" id="cardfront" style="font-size:<%=@frontsize %>"><%= @card.front %></div></div>
+<div class="outer-card"><div class="card" id="cardfront" style="font-size:<%=@frontsize %>"><%=h @card.front %></div></div>
 <div class="outer-card"><div class="card" id="cardback" style="font-size:<%= @backsize %>"></div></div>
 
-<span id="reveal-button"><%= button_to_function 'Reveal Answer', "reveal_back('#{@card.back}')" %></span>
+<span id="reveal-button"><%= button_to_function 'Reveal Answer', "reveal_back('#{h(@card.back)}')" %></span>
 <%= button_to 'Next' %>
 
