--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
 </head>
 <body>
 <div id="wrapper">
+<div id="account">
+<% if current_user %>
+    <li><%= link_to "Edit Profile", edit_user_path(:current) %></li> | 
+    <li><%= link_to "Logout", logout_path %></li>
+  <% else %>
+    <%= link_to "Register", new_user_path %> |
+    <%= link_to "Login", login_path %>
+  <% end %>
+</div>
 
 <div id="header">
   Kirkland's Flashcards
@@ -19,13 +28,9 @@
 
   <% if current_user %>
     <li><%= link_to 'Home', root_url %></li> | 
-    <li><%= link_to 'My Decks', decks_url %></li> | 
-    <li><%= link_to "Edit Profile", edit_user_path(:current) %></li> | 
-    <li><%= link_to "Logout", logout_path %></li>
+    <li><%= link_to 'My Decks', decks_url %></li>
   <% else %>
-    <%= link_to 'Home', root_url %> |
-    <%= link_to "Register", new_user_path %> |
-    <%= link_to "Login", login_path %>
+    <%= link_to 'Home', root_url %>
   <% end %>
 
 </div>
