added a button to play a sound for a card, currently plays the same sound each time

--- a/app/views/quiz/quiz_card.html.erb
+++ b/app/views/quiz/quiz_card.html.erb
@@ -4,3 +4,6 @@
 <span id="reveal-button"><%= button_to_function 'Reveal Answer', "reveal_back('#{h(@card.back)}')" %></span>
 <%= button_to 'Next' %>
 
+<span id="sound"><%= button_to_function 'Play Sound', "play_sound()" %></span>
+
+<!-- <embed src="/sounds/door_open_close.mp3" type="application/x-mplayer2" autostart="true"> -->
