can add sounds to new decks, probably cannot change them; also updated color scheme

--- a/app/views/decks/_card.html.erb
+++ b/app/views/decks/_card.html.erb
@@ -5,9 +5,7 @@
         <%= f.text_field :front, :size => 20, :index => nil %>
         <%= f.text_field :back, :size => 20, :index => nil %>
 
-	<% fields_for card.card_sound, card.card_sound do |s| %>
-          <%= s.file_field :file, :index => nil %>
-	<% end %>
+        <%= f.file_field :sound_file, :index => nil %>
 
 	<% if card.new_record? %>
   	  <%= link_to_function "remove", "$(this).up('.edit-card').remove()" %>
