--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,9 @@
 </div>
 
   Kirkland's Flashcards
-</div>
 
+</div>
+<div id="header2"> </div>
 <div id="user-nav">
   <% if current_user %>
     <li><%= link_to 'Home', root_url %></li>
