--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New deck</h1>
 
-<% form_for(@deck) do |f| %>
+<% form_for @deck, :html => { :multipart => true } do |f| %>
   <%= f.error_messages %>
 
   <%= render :partial => 'fields', :locals => { :f => f } %>
