--- a/app/views/decks/new.html.erb
+++ b/app/views/decks/new.html.erb
@@ -1,8 +1,7 @@
 <h1>New deck</h1>
 
 <% form_for @deck, :html => { :multipart => true } do |f| %>
-  <%= f.error_messages %>
-
+  <%= render :partial => 'errors' %>
   <%= render :partial => 'fields', :locals => { :f => f } %>
   <p><%= f.submit "Create" %></p>
 <% end %>
