--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Kirkland's Flashcards</title>
+  <title>Thai Flashcards</title>
   <%= stylesheet_link_tag 'main' %>
   <%= javascript_include_tag :defaults %>
 </head>
@@ -22,7 +22,7 @@
   <% end %>
 </div>
 
-  Kirkland's Flashcards
+  Thai Flashcards
 
 </div>
 <div id="header2"> </div>
