--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -63,15 +63,20 @@ div#content {
     line-height:150px;
 }
 
-#card-navigation {
- 
-}
-
 #account {
     text-align: right;
     font-size: x-small;
     padding-right: 10px;
     padding-top:0px;
     float:right;
-    
+}
+
+#errors {
+    border:1px solid;
+    color:red;
+    padding:5px;
+}
+
+.card-error {
+    color:red;
 }
