--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -1,4 +1,15 @@
-<p>Quiz Yourself on one of these Decks</p>
+<p>Mulitple Choice Quiz</p>
+
+<% for user in @users %>
+<p>Decks by <%= user.username %>:
+<ul>
+<% for deck in user.decks.delete_if { |deck| deck.share == false }  %>
+  <li><%= link_to h(deck.name), :id => deck, :action => 'multiple_choice' %></li>
+<% end %>
+</ul>
+<% end %>
+
+<p>Honor System Quiz</p>
 
 <% for user in @users %>
 <p>Decks by <%= user.username %>:
