answer_choices now return array, not a hash including that array

--- a/app/views/quiz/multiple_choice_game.html.erb
+++ b/app/views/quiz/multiple_choice_game.html.erb
@@ -1,7 +1,7 @@
 <div class="card" id="cardfront" style="font-size:<%=@frontsize %>"><%=h @card.front %></div>
 
 <div id="choices">
-<% @choices['choices'].each do |choice| %>
+<% @choices.each do |choice| %>
 <p>
   <%= link_to "#{h choice.back}", :answer => choice.id %>
 </p>
