--- a/app/views/quiz/multiple_choice_game.html.erb
+++ b/app/views/quiz/multiple_choice_game.html.erb
@@ -3,7 +3,7 @@
 <div id="choices">
 <% @choices.each do |choice| %>
 <p>
-  <%= link_to "#{h choice.back}", :answer => choice.id %>
+  <%= link_to "#{h choice.back}", :user_answer => choice.id %>
 </p>
 <% end %>
 </div>
