give player status on currenct multiple choice game

--- a/app/views/quiz/multiple_choice_game.html.erb
+++ b/app/views/quiz/multiple_choice_game.html.erb
@@ -1,3 +1,9 @@
+<!-- status info: how many correct / how many so far / how many remaining -->
+<div class="game-status">
+  <p>Correct: <%= "#{ @correct_answers}" %> out of <%= "#{@cards_answered}" %>
+  <br />Remaining: <%= "#{ @cards_remaining}" %></p>
+</div>
+
 <div class="card" id="cardfront" style="font-size:<%=@frontsize %>"><%=h @card.front %></div>
 
 <div id="choices">
