put wrong answer correction in partial

--- a/app/views/quiz/end_game.html.erb
+++ b/app/views/quiz/end_game.html.erb
@@ -5,9 +5,5 @@
 <p><%= link_to 'Go Home', :action => 'index' %></p>
 
 <% if @last_front %>
-<div id="last-answer">
-<p>Last Card: 
-<div style="font-size:<%=@last_size %>"><%= @last_front %></div></p>
-<p>Correct Answer: <%= @last_back %></p>
-</div>
+  <%= render :partial => 'correction' %>
 <% end %>
