--- a/app/views/quiz/multiple_choice_game.html.erb
+++ b/app/views/quiz/multiple_choice_game.html.erb
@@ -14,9 +14,5 @@
 </div>
 
 <% if @last_front %>
-<div id="last-answer">
-<p>Last Card: 
-<div style="font-size:<%=@last_size %>"><%= @last_front %></div></p>
-<p>Correct Answer: <%= @last_back %></p>
-</div>
+  <%= render :partial => 'correction' %>
 <% end %>
