--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,7 @@
     <%= link_to "Login", login_path %>
   <% end %>
 </div>
-
-  Thai Flashcards
-
+<%= image_tag "Web-and-Devices-750and188Logo2.gif", :size => "750x170" %>
 </div>
 <div id="header2"> </div>
 <div id="user-nav">
