--- a/app/views/quiz/multiple_choice_index.html.erb
+++ b/app/views/quiz/multiple_choice_index.html.erb
@@ -1,7 +1,10 @@
-<p>Mulitple Choice Quiz</p>
+<p>Multiple Choice Quiz</p>
 
-<ul>
-<% @decks.each do |deck| %>
-  <li><%= link_to h(deck.name), :id => deck, :action => 'multiple_choice' %></li>
+<% @decks_with_categories.each do |key, value| %>
+  <p><%= h key %></p>
+  <ul>
+  <% value.each do |deck| %>
+      <li><%= link_to h(deck.name), :id => deck, :action => 'multiple_choice' %></li>
+  <% end %>
+  </ul>
 <% end %>
-</ul>
