added new multiple choice menu to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
   <li><%= link_to 'About', :controller => 'meta_pages', :action => 'about' %></li>
   <!-- <li><%= link_to 'News', :controller => 'meta_pages', :action => 'news' %></li>  -->
 
+  <li><p><b>Games</b></p></li>
+  <li><%= link_to 'Multiple Choice', :controller => 'quiz', :action => 'multiple_choice_index' %></li>
 </div>
 
 <div id="content">
