made separate page for basic flashcards; changed front page to link to types of games only

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 
   <li><p><b>Games</b></p></li>
   <li><%= link_to 'Multiple Choice', :controller => 'quiz', :action => 'multiple_choice_index' %></li>
+  <li><%= link_to 'Basic Flashcards', :controller => 'quiz', :action => 'basic_flashcards_index' %></li>
 
   <li><p><b>Admin</b></p></li>
   <% if current_user %>
